# cerberust

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Code_of_Conduct.md  Dockerfile  README.md  cerberust.example.toml  docker-compose.yml
cerberust/: Cargo.toml
cerberust/src/: error.rs  logger.rs  main.rs  server.rs
cerberust/src/api/: forgot.rs  login.rs  logout.rs  mod.rs  refresh.rs  register.rs  resend.rs  verify.rs  whoami.rs
cerberust/src/extractors/: validator.rs
cerberust/src/utils/: hash.rs  jwt.rs  mod.rs  response.rs  smtp.rs
cerberust/src/utils/smtp/: forgot.rs  mod.rs  verify.rs
keys/: private_key.pem  public_key.pem
migrations/2024-02-05-071229_setup/: down.sql  up.sql
migrations/2024-02-05-071312_user/: down.sql  up.sql
migrations/2024-02-05-072930_session/: down.sql  up.sql
migrations/2024-02-05-073538_refresh_token/: down.sql  up.sql
migrations/2024-02-05-073706_token/: down.sql  up.sql
migrations/2024-02-18-124536_resource/: down.sql  up.sql
migrations/2024-02-18-164023_role/: down.sql  up.sql
migrations/2024-02-18-164058_privilege/: down.sql  up.sql
migrations/2024-02-18-164127_user_role/: down.sql  up.sql
migrations/2024-02-18-164137_role_privilege/: down.sql  up.sql
migrations/2024-02-22-045633_relation/: down.sql  up.sql
postgres-driver/: Cargo.toml
postgres-driver/src/: lib.rs
repositories/: Cargo.toml
repositories/src/: lib.rs
repositories/src/models/: account.rs  email_verification_token.rs  mod.rs  refresh_token.rs  reset_password_token.rs  session.rs  token.rs  user.rs
src/: config.rs  error.rs  main.rs  schema.rs  server.rs
src/actions/: mod.rs
src/actions/privilege/: create.rs  delete.rs
src/actions/refresh_token/: create.rs  delete.rs  details.rs  mod.rs
src/actions/relation/: create.rs  delete.rs  details.rs  mod.rs
src/actions/resource/: create.rs  delete.rs  details.rs  list.rs  update.rs
src/actions/role/: create.rs  delete.rs  details.rs  list.rs  mod.rs
src/actions/session/: create.rs  details.rs  mod.rs  update.rs
src/actions/token/: create.rs  delete.rs  details.rs
src/actions/user/: create.rs  details.rs  update.rs
src/actions/user_role/: create.rs
src/api/: forgot.rs  login.rs  logout.rs  mod.rs  refresh.rs  register.rs  resend.rs  verify.rs  whoami.rs
src/api/auth/: login.rs  mod.rs  register.rs  resend.rs  verify.rs
src/api/password/: forgot.rs  mod.rs
src/api/resource/: create.rs  delete.rs  details.rs  list.rs  mod.rs  update.rs
src/api/role/: create.rs  delete.rs  details.rs  grant.rs  list.rs  mod.rs  revoke.rs
src/api/session/: mod.rs  refresh.rs
src/api/user/: mod.rs  whoami.rs
src/extractors/: authenticator.rs  mod.rs
src/models/: mod.rs  privilege.rs  refresh_token.rs  relation.rs  resource.rs  role.rs  role_privilege.rs  session.rs  token.rs  user.rs  user_role.rs
src/utils/: db.rs  hash.rs  helper.rs  jwt.rs  mod.rs  smtp.rs
surrealdb-driver/: .surrealdb  Cargo.toml
surrealdb-driver/events/: update_user_event.surql
surrealdb-driver/schemas/: account_table.surql  email_verification_token_table.surql  refresh_token_table.surql  reset_password_token_table.surql  session_table.surql  token_table.surql  user_table.surql
surrealdb-driver/src/: lib.rs
surrealdb-driver/src/account/: create.rs  delete.rs  details.rs  list.rs  mod.rs
surrealdb-driver/src/email_verification_token/: create.rs  delete.rs  details.rs  mod.rs
surrealdb-driver/src/refresh_token/: create.rs  delete.rs  details.rs  list.rs  mod.rs
surrealdb-driver/src/reset_password_token/: create.rs  delete.rs  mod.rs
surrealdb-driver/src/session/: create.rs  details.rs  mod.rs  update.rs
surrealdb-driver/src/token/: create.rs  delete.rs  details.rs  mod.rs
surrealdb-driver/src/user/: create.rs  details.rs  mod.rs  update.rs
