[package]
name = "cerberust"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["default"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0", features = ["trace", "cors"] }
tracing = "0"
tracing-subscriber = "0"
thiserror = "1.0.56"
validator = { version = "0", features = ["derive"] }
hyper = "1.1.0"
dotenvy = "0.15"
argon2 = "0.5"
time = "0.3"
lettre = "0.11"
axum-macros = "0.4"
uuid = { version = "1.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-cookies = "0.10"
jsonwebtoken = { version = "9", features = ["use_pem"] }
diesel = { version = "2.1.4", features = ["uuid", "chrono", "serde_json"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
async-recursion = "1"
toml = "0.8"
