[package]
name = "cerberust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
postgres-driver = { optional = true, path = "../postgres-driver" }
surrealdb-driver = { optional = true, path = "../surrealdb-driver" }
repositories = { path = "../repositories" }
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["default"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0", features = ["trace", "cors"] }
tracing = "0"
tracing-subscriber = "0"
thiserror = "1.0.56"
validator = { version = "0", features = ["derive"] }
hyper = "1.1.0"
dotenvy = "0.15"
argon2 = "0.5"
time = "0.3"
lettre = "0.11"
axum-macros = "0.4"
uuid = "1.7"
chrono = "0.4"
tower-cookies = "0.10"
jsonwebtoken = { version = "9", features = ["use_pem"] }

[features]
default = ["surrealdb"]
surrealdb = ["surrealdb-driver"]
postgres = ["postgres-driver"]
