[package]
name = "surrealdb-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
repositories = { path = "../repositories" }
surrealdb = { version = "1", features = ["protocol-http"] }
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
snafu = "0"
